--- a/_resource/overrides/main.html
+++ b/_resource/overrides/main.html
@@ -17,10 +17,22 @@ by adding marketing-requested elements
  </article>
 </div>
 </div>
+
 {%- endmacro %}
               
               {% block extrahead %}
               {{ super() }}
+
+              <html data-lt-installed="true">
+                <head>
+                    <meta property="og:title" content="Percona ProxySQL admin tools">
+                    <meta property="og:description" content="Documentation">
+                    <meta property="og:image" content="https://docs.percona.com/proxysql/_images/Percona-icon-transparent.png"
+                    <meta property="og:url" content="https://docs.percona.com/proxysql/">
+                </head>
+                <body>
+                </body>
+              </html>
 
               <script>
               (function (w, d, s, l, i) {
