--- a/_resource/overrides/main.html
+++ b/_resource/overrides/main.html
@@ -54,6 +54,9 @@
                   <div class="md-sidebar__inner">
                     {% include "partials/toc.html" %}
                   </div>
+                  <div class="md-sidebar__inner">
+                    {% include "partials/banner.html" %}
+                  </div>
                 </div>
               </div>
             {% endif %}
